# MikanOS.rs

./: .gitignore  OVMF.fd  README.md  Rakefile  run_qemu.sh
boot/: .gitignore  Cargo.toml  Makefile
boot/src/: main.rs
font_tbl/: .gitignore  Cargo.toml  build.rs  hankaku.txt
font_tbl/src/: font_tbl.rs  lib.rs
fonts/: Cargo.toml  build.rs
fonts/src/: lib.rs
kernel/: .gitignore  Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/src/: console.rs  fonts.rs  graphics.rs  main.rs  mouse.rs  pci.rs
kernel/src/fonts/: .gitignore  mod.rs
mikan/: Cargo.toml
mikan/src/: lib.rs
