[package]
name = "kernel"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1"
panic-halt = "0.2"
bit_field = "0.10"
x86_64 = "0.13"
byteorder = { version = "1", default-features = false }
mikan = { path = "../mikan" }